deploy(release): Release CDP-7.1.7-V1